# 42-Porto-CommonCore

./: .gitmodules  README.md
Rank 0/Libft/: CMakeLists.txt  README  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isascii.c  ft_isdigit.c  ft_itoa.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstdelone.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_memcmp.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  libft.h  makefile  test_libft_characters.c  test_libft_fildescriptors.c  test_libft_lists.c  test_libft_memory.c  (+1 more)
Rank 1/Born2beroot/: CMakeLists.txt
Rank 1/ft_printf/: CMakeLists.txt  Makefile  ft_printf.c  ft_printf_extras.c  ft_printf_helpers.c  ft_printf_parse_format.c  libftprintf.h  test_ft_printf.c
Rank 1/ft_printf/Parsing/: ft_parse_format.c  parse_format.c
Rank 1/ft_printf/helpers/: ft_helpers.c  helpers.c
Rank 1/ft_printf/libft/: ft_isalpha.c  ft_isprint.c  ft_itoa.c  ft_lstadd_front.c  ft_lstiter.c  ft_lstmap.c  ft_lstsize.c  ft_memchr.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putnbr_fd.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_toupper.c  libft.h
Rank 1/ft_printf/print_helpers/: ft_print_hex.c  ft_print_number.c  ft_print_strings.c
Rank 1/get_next_line/: CMakeLists.txt  find_nonascii.py  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  no_newline.txt  test1.txt  test2.txt  test_get_next_line.c  test_get_next_line_bonus.c
